# finances-csv-importer

./: Cargo.toml  LICENSE  README.md
resources/csv/: example.csv
resources/schemas/: v1__base.sql
scripts/: init-postgres.sh  run-postgres.sh
src/: config.rs  currency.rs  db.rs  domain.rs  main.rs
src/templates/: init.sql
